[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scripts/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 256.0
margin_bottom = 144.0
color = Color( 0.0823529, 0.486275, 0.454902, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 256.0
margin_bottom = 144.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 40.0
margin_top = 33.0
margin_right = 215.0
margin_bottom = 110.0

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 175.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resume Game"

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 175.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "New Game"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 175.0
margin_bottom = 77.0
text = "Exit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
